agregado clase 4, binding and events. mas otros detalles

--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,26 +1,33 @@
 <h1>lista de libros</h1>
 
-<h2 *ngIf="ofertaMayor== true">ofertas de invierno (libros resaltados)</h2>
+<h2 *ngIf="ofertaInvierno== true">ofertas de invierno (libros resaltados)</h2>
 
 <table class="table table-bordered">
     <thead class="thead-dark">
         <tr>
-            <th>imagen</th>
-            <th>tipo</th>
-            <th>titulo</th>
-            <th>autor</th>
-            <th>materia</th>
-            <th>precio</th>
+            <th scope="col">imagen</th>
+            <th scope="col">tipo</th>
+            <th scope="col">titulo</th>
+            <th scope="col">autor</th>
+            <th scope="col">materia</th>
+            <th scope="col">precio</th>
+            <th scope="col">comprar</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let book of books" [ngClass]="{'oferta': book.oferta}">
-            <img [src]="book.imagen" [alt]="book.imagen">
+            <th scope="row"><img width="80" [src]="book.imagen" [alt]="book.imagen"></th>
             <td>{{book.tipo}}</td>
             <td>{{book.titulo}}</td>
             <td>{{book.autor}}</td>
             <td>{{book.materia}}</td>
             <td>{{book.precio | currency}}</td>
+            <td>
+                <button type="button" class="btn btn-success btn-sm" (click)="menosCantidad(book)">-</button>
+                <input type="text" [(ngModel)]="book.cantidad" (keyup)="cambioCantidad($event, book)">
+                <button type="button" class="btn btn-success btn-sm" (click)="masCantidad(book)">+</button>
+            </td>
         </tr>
     </tbody>
 </table>
+<p>Hay un limite de compra de 5 unidades por libro en este momento, disculpe las molestias.</p>
