--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,24 +6,17 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contactos</a>
+                <a class="nav-link" [routerLink]="['/about']">Acerca de...</a>
             </li>
         </ul>
     </div>
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-8">
-            <app-book-list></app-book-list>
-        </div>
-        <div class="col-4">
-            <app-shop-list></app-shop-list>
-        </div>
-    </div>
+    <router-outlet></router-outlet>
 </div>
 
 <footer class="text-center text-light bg-dark">{{title}}</footer>
