--- a/src/app/bookstore-about/bookstore-about.component.html
+++ b/src/app/bookstore-about/bookstore-about.component.html
@@ -1,2 +1,7 @@
+<!-- El componente "bookstore-about", primero lo cree como "bookstore-contact".
+Pero despue me parecio mejor cambiar el nombre.
+Esto lo tuve que hacer a mano ya que angular no ofrece hacerlo de forma automatica.
+Supongo que esta todo correcto y no hay ningun error. -->
+
 <p>este es un trabajo en desarrollo, asique espere encontrar cosas incompletas o que no llevan a ninguna parte.</p>
 <p>sepa comprender la situacion y disculpe las molestias ocasionadas</p>
