--- a/src/app/shop-list/shop-list.component.html
+++ b/src/app/shop-list/shop-list.component.html
@@ -1,1 +1,5 @@
 <h1>carro de compras...</h1>
+
+<ul>
+    <li *ngFor="let book of listaDeCompras$ | async">{{book.titulo}}: {{book.cantidad}}</li>
+</ul>
