--- a/src/app/input-minusnumberplus/input-minusnumberplus.component.html
+++ b/src/app/input-minusnumberplus/input-minusnumberplus.component.html
@@ -1,5 +1,13 @@
-<div>
-    <button type="button" class="btn btn-success btn-sm" (click)="menosCantidad()">-</button>
+<div class="input-group">
+
+    <div class="input-group-prepend">
+        <button type="button" class="btn btn-success btn-sm" (click)="menosCantidad()">-</button>
+    </div>
+
     <input type="text" [(ngModel)]="cantidad" (keyup)="cambioCantidad($event)">
-    <button type="button" class="btn btn-success btn-sm" (click)="masCantidad()">+</button>
+
+    <div class="input-group-append">
+        <button type="button" class="btn btn-success btn-sm" (click)="masCantidad()">+</button>
+    </div>
+
 </div>
