--- a/src/app/bookstore-about/bookstore-about.component.html
+++ b/src/app/bookstore-about/bookstore-about.component.html
@@ -1,2 +1,10 @@
-<p>este es un trabajo en desarrollo, asique espere encontrar cosas incompletas o que no llevan a ninguna parte.</p>
-<p>sepa comprender la situacion y disculpe las molestias ocasionadas</p>
+
+<p class="font-weight-bold">este es un trabajo en desarrollo, asique espere encontrar cosas incompletas o que no llevan a ninguna parte.</p>
+<p class="font-weight-bold">sepa comprender la situacion y disculpe las molestias ocasionadas</p>
+
+<div class="d-flex justify-content-center">
+    <p class="font-weight-bold">vueltas, vueltas y vueltas...</p>
+    <div class="spinner-border text-success" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
